--- a/install.txt
+++ b/install.txt
@@ -40,7 +40,7 @@ python3 -m venv venv
 
 source venv/bin/activate
 
-apt-get install pip
+apt-get install pip -y
 
 pip install selenium webdriver-manager
 
